@@ -76,6 +76,7 @@ with all sufficient information, see the ChangeLog file or Redmine
 * Kernel
 
   * Kernel#yield_self  [Feature #6721]
+  * Kernel#pp [Feature #14123]
 
 * Module
   * Module#attr, attr_accessor, attr_reader, attr_writer are now public [#14132]
